# explainable-recsys

./: .gitignore  Dockerfile  LICENSE  README.md  app_streamlit.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_experiments.py  setup.cfg
.github/workflows/: ci_cd_deploy.yml  ruff.yml
data/processed/: movie_content_profiles.csv  movie_features.parquet  user_features.parquet
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_content_based_filtering_embeddings.ipynb  03_modeling.ipynb  04_collaborative_filtering.ipynb  05_interpretability.ipynb  06_final_report.ipynb
scripts/: run_experiments.py  test_all_models.py  train_and_save_models.py
src/: data_loader.py  explainability.py  recommender.py
src/content_based/: embeddings.py  evaluation.py  explainability.py  recommender.py
src/eda/: data_loader.py  data_quality.py  paths.py  utils.py
src/eda/movie_actors/: __init__.py  checks.py
src/eda/movie_countries/: __init__.py  checks.py
src/eda/movie_directors/: __init__.py  checks.py
src/eda/movie_genres/: __init__.py  checks.py
src/eda/movie_locations/: __init__.py  checks.py
src/eda/movie_tags/: __init__.py  checks.py
src/eda/movies/: __init__.py  checks.py
src/eda/tags/: __init__.py  checks.py
src/eda/user_ratedmovies/: __init__.py  checks.py
src/eda/user_taggedmovies/: __init__.py  checks.py
src/features/: feature_engineering.py
src/models/collaborative_filtering/: __init__.py  checks.py  collaborative_filtering.py
tests/: test_collaborative_filtering.py  test_popularity_recommender.py
(+3 files in other folders)
