[project]
name = "explainable-recsys"
version = "0.1.0"
description = "Explainable recommender system project"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
  ".git",
  ".venv",
  ".ruff_cache",
  "data",
  "mlruns",
  "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
